--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,42 @@
-
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 
-# Environments
-.env
-.venv
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Logs
+*.log
+
+# Environment
+env/
 venv/
 ENV/
-env/
+.venv/
+env.bak/
+venv.bak/
 
-# IDEs
-.vscode/
+# IDE
 .idea/
+.vscode/
+*.swp
+*.swo
 
 # ComfyUI
 *.bin
@@ -23,3 +46,7 @@ input/
 
 # Config
 config.json
+
+# OS
+.DS_Store
+Thumbs.db
