feat: Complete Overhaul of Nano Banana Node with Aspect Ratio Control & Fusion

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,1 @@
-REPLICATE_API_KEY="YOUR_API_KEY"
-URL_ENDPOINT="https://generativelanguage.googleapis.com/v1alpha/models/gemini-2.5-flash-image-preview:generateContent"
+GOOGLE_API_KEY="YOUR_API_KEY"
