feat: Add Google Vertex AI and Generative AI API support with grounding capabilities
- Introduced `.env.api.template` and `.env.vertexai.template` for API key and project configuration.
- Created `CHANGELOG.md` to document notable changes and version history.
- Updated `README.md` to reflect new features, installation instructions, and configuration setup.
- Implemented dual authentication approach in `auth.py` to detect and initialize based on available credentials.
- Refactored node structure: removed old `nano_banana_nodes.py` and created `nano_banana_grounding_nodes.py` for grounding functionality.
- Enhanced image generation nodes to support both Vertex AI and Generative AI API, including error handling and response parsing.
- Added utility functions for image tensor conversion in `image_utils.py`.
- Organized project structure with dedicated directories for core, nodes, and utils.

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,11 @@ python-dotenv
 # during installation in this environment.
 google-generativeai
 google-genai
+google-cloud-aiplatform
 
-# For image processing (PIL) to handle image data
-Pillow
+# For image processing (PIL) to handle image data, Assume its already installed with ComfyUI, commented out to avoid version conflicts
+# Pillow
 
-# --- Assumed Core Dependencies ---
-# These packages are typically required by the host application (e.g., ComfyUI)
-# and are listed here for completeness.
+# Core Dependencies, Assume its already installed with ComfyUI, commented out to avoid version conflicts
 # torch
 # numpy
